# hindsight_admin

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  artifact_push.sh  docker_push.sh  hindsight_admin_server.xml  run.sh
cmake/: FindWt.cmake  mozsvc.cmake
css/: hindsight_admin.css
resource_bundle/: hindsight_admin.xml
src/: CMakeLists.txt  auth_widget.cpp  auth_widget.h  cfg_viewer.cpp  cfg_viewer.h  constants.h  constants.in.cpp  hindsight_admin.cpp  hindsight_admin.h  output_tester.cpp  output_tester.h  plugins.cpp  plugins.h  registration_model.cpp  registration_model.h  run_matcher.cpp  run_matcher.h  session.cpp  session.h  source_viewer.cpp  source_viewer.h  tester.cpp  tester.h  user.cpp  user.h  utilization.cpp  utilization.h
